--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,14 @@
         <div class="container-fluid">
             <h1>Interactive Box Plots</h1>
             <div class="row">
-                <div class="col-lg-6" id="area1"></div>
-                <div class="col-lg-6" id="area2"></div>
+                <div class="col-sm-10" id="area1"></div>
+                <div class="col-sm-2" id="area2"></div>
             </div>
         </div>
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script type="text/javascript">
             let data_imported = {{data | safe}};
+            console.log('Im here')
         </script>
         <script src="{{ url_for('static', filename="js/index.js")}}"></script>
     </body>
