Added the code to make columns appear in a single row

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
         <div class="container-fluid">
             <h1>Interactive Box Plots</h1>
             <div class="row">
-                <div class="col-sm-10" id="area1"></div>
-                <div class="col-sm-2" id="area2"></div>
+                <div class="col-lg-11" id="area1"></div>
+                <div class="col-lg-1" id="area2"></div>
             </div>
         </div>
         <script src="https://d3js.org/d3.v4.min.js"></script>
