--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <h1>Interactive Box Plots</h1>
             <div class="row">
-                <div class="col-lg-11" id="area1"></div>
+                <div class="col-lg-11 text-center" id="area1"></div>
                 <div class="col-lg-1" id="area2"></div>
             </div>
         </div>
