--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,7 @@
 /* To display the buttons in the center of the column horizontally */
-.btn-group{
+/* .btn-group{
     display: inline-block,
-}
+} */
 /* To display the border around the bars in "Area1" */
 .main-svg {
     border: 1px solid black;
