Added the buttons below each variable

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,8 +1,5 @@
-/* To display the buttons in the center of the column horizontally */
-/* .btn-group{
-    display: inline-block,
-} */
 /* To display the border around the bars in "Area1" */
 .main-svg {
     border: 1px solid black;
+    color: lightslategrey;
 }
