Text below each bar is now clickable again

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,15 @@
     </head>
     <body>
         <div class="container-fluid">
-            <h1>Interactive Box Plots</h1>
+            <h1>Configuration Filter Chart</h1>
             <div class="row">
                 <!-- Area 1 contains the bars for all variables in the dataset. Area 2 contains the result bar showing the Max and Min thp for complete dataset -->
-                <div class="col-md-11 text-center" id="area1"></div>
-                <div class="col-md-1" id="area2"></div>
+                <div class="col-lg-11 text-center" id="area1"></div>
+                <div class="col-lg-1" id="area2"></div>
             </div>
+            <a href=".">
+            <h3>Click to reset</h3>
+            </a>
         </div>
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script type="text/javascript">
