--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,10 @@
                 <div class="col-lg-11 text-center" id="area1"></div>
                 <div class="col-lg-1" id="area2"></div>
             </div>
+            <div class="row">
+                <!-- Area 3 contains blockchain plot -->
+                <div class="col-lg-12" id="area3"></div>
+            </div>
             
         </div>
         <script src="https://d3js.org/d3.v4.min.js"></script>
