Add csv accept type

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <h1>Configuration Filter Chart</h1>
             <h1>Select a dataset</h1>
             <form action="/">
-                <input type="file" name="dataset"><br><br>
+                <input type="file" accept=".csv" name="dataset"><br><br>
                 <input type="submit">
             </form>
             <a href=".">
