--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <h1>Configuration Filter Chart</h1>
+            <h1>Interactive Configuration Explorer</h1>
             <a href=".">
                 <h3>Click to reset</h3>
             </a>
